syntax = "proto3";

package time_v1;

option go_package = "github.com/robertobadjio/tgtime-aggregator/pkg/time_v1;time_v1";

service TimeV1 {
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc GetSummary (GetSummaryRequest) returns (GetSummaryResponse);
}

message CreateRequest {
  string mac_address = 1;
  int64 seconds = 2;
  int64 router_id = 3;
}

message CreateResponse {
  string mac_address = 1;
  int64 seconds = 2;
  int64 router_id = 3;
}

message Break {
  int64 seconds_start = 1;
  int64 seconds_end = 2;
}

message Summary {
  string mac_address = 1;
  int64 seconds = 2;
  repeated Break breaks = 3;
  string date = 4;
  int64 seconds_start = 5;
  int64 seconds_end = 6;
}

message Filter {
  string key = 1;
  string value = 2;
}

message GetSummaryRequest {
  repeated Filter filters = 1;
}

message GetSummaryResponse {
  repeated Summary summary = 1;
}